--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "no-console": "off",
     "semi": ["error", "never"],
     "indent": ["error", 2],
     "quotes": ["error", "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
