--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple promise-based NASA API wrapper for node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "eslint lib spec *.js",
+    "test": "node spec/support/jasmine-runner.js"
   },
   "keywords": [
     "nasa",
@@ -18,6 +19,17 @@
   },
   "devDependencies": {
     "eslint": "^3.1.1",
-    "eslint-config-defaults": "^9.0.0"
-  }
+    "eslint-config-defaults": "^9.0.0",
+    "fake-http-request": "^1.3.0",
+    "jasmine": "^2.4.1",
+    "jasmine-spec-reporter": "^2.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stojanovic/nasa-client.git"
+  },
+  "bugs": {
+    "url": "https://github.com/stojanovic/nasa-client/issues"
+  },
+  "homepage": "https://github.com/stojanovic/nasa-client"
 }
